--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "type-check": "tsc --noEmit",
-    "clean": "rimraf dist",
-    "build:ci": "npm run clean && npm run type-check && npm run build"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "ethers": "^6.13.0",
@@ -18,25 +14,10 @@
     "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.14.0",
     "@vitejs/plugin-react": "^4.3.0",
-    "buffer": "^6.0.3",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
-    "util": "^0.12.5",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
     "typescript": "^5.5.0",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0",
-    "rimraf": "^5.0.0"
-  },
-  "engines": {
-    "node": "18.x"
+    "vite": "^5.4.0"
   }
 }
