--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2022",
-    "lib": ["es2022"],
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./dist",
+    "target": "ES2022",
+    "useDefineForClassFields": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "./contracts/**/*",
-    "./scripts/**/*",
-    "./test/**/*",
-    "./types/**/*",
-    "./hardhat.config.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "artifacts",
-    "cache",
-    "frontend"
-  ]
+  "include": ["src"]
 }
